use a valid SPDX license identifier

--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
         "document",
         "vector"
     ],
-    "license": "The MIT License (MIT)",
+    "license": "MIT",
     "licenses": [
         {
             "type": "MIT",
